Cerebellar function test added

--- a/combinedRecord.tex
+++ b/combinedRecord.tex
@@ -2954,6 +2954,102 @@ The subject is questioned about any difficulty in swallowing, nasal regurgitatio
 \item{What is Jendrassik's sign?}
 \end{enumerate}
 %--------------------}}}
+%-------------Cerebellar Function Tests------{{{
+															\chapter*{\centering Cerebellar Function Tests}
+															\begin{tabular}{p{5in} p{1in}}
+																\textbf{Exp No:}  & \textbf{Date:}\\
+															\end{tabular}
+The functions of the cerebellum are tested under the following headings:
+\begin{itemize}
+\item{Tone}
+\item{Coordination}
+\item{Reflexes}
+\item{Speech}
+\item{Gait}
+\item{Involuntary movements.}
+\end{itemize}
+\section*{Tone}
+\addfig{
+	\begin{figure}[H]
+		\begin{subfigure}[t]{.4\textwidth}	
+			\centering
+			\includegraphics[width=5cm,height=5cm]{./clinicalPhysioPic/cerebellum/fingerNoseTest.jpg}
+			\subcaption{Finger Nose Test \& Finger Finger nose Test}
+		\end{subfigure}
+		\hspace{\fill}
+		\begin{subfigure}[t]{.4\textwidth}	
+			\centering
+			\includegraphics[width=5cm,height=5cm]{./clinicalPhysioPic/cerebellum/dysdidochokinesia.jpg}
+			\subcaption{Rapid Alternating Movements}
+		\end{subfigure}
+		\hspace{\fill}
+		\begin{subfigure}[t]{.4\textwidth}	
+			\centering
+			\includegraphics[width=5cm,height=5cm]{./clinicalPhysioPic/cerebellum/tandemWalking.jpg}
+			\subcaption{Tandem Walking}
+		\end{subfigure}
+		\hspace{\fill}
+		\begin{subfigure}[t]{.4\textwidth}	
+			\centering
+			\includegraphics[width=5cm,height=5cm]{./clinicalPhysioPic/cerebellum/heelShinTest.jpg}
+			\subcaption{Heel Shin Test}
+		\end{subfigure}
+		\caption*{Tests Of Coordination}
+		\label{TestsOfCoordination}
+	\end{figure}
+	}
+Muscle tone is the state of partial contraction found in healthy muscles at rest. It is the degree of tension present in a muscle at rest. It is assessed by passive movements.
+\subsection*{Method of eliciting tone:}
+Instruct the subject to keep his limbs relaxed. Move the limbs passively at the joints and assess the resistance offered by the muscles.
+\section*{Coordination}
+The coordination of movements means smooth recruitment, interaction and cooperation of a group of muscles to carry out a precise and definite motor act.
+\subsection*{Tests of coordination in the upper limbs:}
+\subsubsection*{The finger-nose test:}
+Ask the subject to keep his right upper limb outstretched and then to touch the tip of his nose with his forefinger. Ask him to do this few times and check if he is able to perform it smoothly. Repeat this in the opposite limb.
+In cerebellar lesions, there will be overshooting of the finger ('past pointing). This is known as Dysmetria.
+\subsubsection*{The finger-finger-nose test:}
+The subject is instructed to touch the examiner’s finger first and then touch his nose. Ask him to do this few times.Repeat this in the other limb.
+\subsubsection*{Drawing a circle in the air:}
+Ask the subject to draw a circle in the air with his index finger.
+\subsubsection*{Diadochokinesia:}
+Ask the subject to carry out rapid alternating movements of supination and pronation of one forearm and hand over the palm of the other hand. Difficulty in performing such rapid alternate movements is called dysdiadochokinesia.
+\subsubsection*{Rebound Phenomenon:}
+Ask the subject to flex his forearm against resistance offered by the examiner. Withdraw the resistance suddenly and check for rebound phenomenon. Repeat the test on the other side.
+Normally he should be able to put a brake on the movement. In cerebellar lesions, there is inability to terminate the movement all of a sudden due to which he may even hit his own face.
+\subsection*{Tests of coordination in the lower limbs:}
+\subsubsection*{Tandem walking:}
+	Ask the subject to walk in a straight line heel to toe.
+		In cerebellar lesions, he will deviate to one side or the other depending on the side of lesion.
+\subsubsection*{Heel knee test:}
+		In supine position, ask the subject to place the heel of one leg on the opposite knee and then to slide it down along the shin of the tibia towards the ankle. Ask him to repeat the procedure few times in quick succession. Repeat the test for the other leg also.
+			In cerebellar lesions, the subject will have difficulty in performing the test smoothly.
+\subsubsection*{Drawing a circle in the air:}
+				Ask the subject to draw a circle in the air with his great toe. Test the other leg  also.
+				\section*{Deep Reflex – Knee Jerk}
+					Perform knee jerk on both sides in the sitting position with legs hanging down freely.
+						In cerebellar lesion, pendular knee jerk response is observed.
+
+						\section*{Speech:}
+						Ask the subject to pronounce RAJAGOPALACHARI”/“RHINOCEROUS”
+							In cerebellar lesion, there will be dysarthria. (scanning speech/ staccato speech)
+							\section*{Gait:}
+								Ask the subject to walk barefoot for at least 9 meters and then turn around and walk back to the starting point. Observe the gait.
+									In cerebellar lesion, the gait is broad based with feet apart, staggering or reeling towards the side of the lesion.This is called, 'Ataxic or Reeling or Drunken gait'.
+								\section*{Involuntary Movements:} 
+								\subsection*{Tremor:}
+										Tremor may be defined as involuntary, regular, rhythmic, purposeless movements due to alternate contraction and relaxation of the agonist and antagonist muscles.
+											In cerebellar lesion, coarse tremor occurs when the subject intends to do something or attempts to pick up an object. This is called intention tremor.
+											\subsection*{Nystagmus}
+											Nystagmus is involuntary, jerky, to and fro, often rhythmical oscillations of the eyeball. In cerebellar lesion, nystagmus is seen towards the side of the lesion.
+											\section*{Questions:}
+											\begin{enumerate}
+\item{ What are the functions of cerebellum?}
+\item{ What is dysdiadochokinesia?}
+\item{ Name the gait seen in cerebellar lesion.}
+\item{ Name few other abnormal gaits.}
+\item{ What is Resting tremor?}
+											\end{enumerate}
+%---------------------------------------}}}
 	\end{document}
 
 
