Cranial nerves 1-6 partial

--- a/combinedRecord.tex
+++ b/combinedRecord.tex
@@ -3050,6 +3050,82 @@ Normally he should be able to put a brake on the movement. In cerebellar lesions
 \item{ What is Resting tremor?}
 											\end{enumerate}
 %---------------------------------------}}}
+
+															\chapter*{\centering Examination Of Cranial Nerves (1-6)}
+															\begin{tabular}{p{5in} p{1in}}
+																\textbf{Exp No:}  & \textbf{Date:}\\
+															\end{tabular}
+\section*{1$^{st}$ CRANIAL NERVE – OLFACTORY NERVE (purely sensory)}
+It serves the sense of olfaction.
+\subsection*{Test:}
+Make sure that the subject does not have any upper airway congestion or obstruction. To examine use familiar substances like clove oil, peppermint oil,coffeeoap,asafoetida etc. Avoid using irritants like ammonia as it stimulates the fifth cranial nerve.
+Test each nostril separately with eyes closed after giving proper instructions to the subject, to indicate if he recognizes the particular substance or not. Tabulate the results.
+\subsection*{Discussion:}
+A normal subject can recognize the substance with each nostril.
+	Anosmia means complete absence of smell.Parosmia means perverted sensation of smell Hyposmia means reduction in the sense of smell. All these conditions develop due to damage to the olfactory pathways by trauma or disease. Olfactory hallucinations occur in temporal lobe epilepsy.
+
+		\section*{2$^{nd}$ CRANIAL NERVE – OPTIC NERVE (purely sensory)}
+		It serves the sense of vision. The functions to be tested are:
+		\begin{enumerate}
+\item{Visual acuity}
+\item{Field of vision}
+\item{Color vision}
+\item{Pupillary light reflex.}
+\item{Accommodation reflex.}
+		\end{enumerate}
+		\subsection*{Visual acuity:}
+		It is defined as the resolving power of the eyes i.e. the extent to which the eye can perceive the details and contours of an object clearly. It is explained in terms of mi nimum separable distance ie, the shortest distance by which two lines can be separated and still can be perceived as two lines. Visual acuity is the function of cones.
+		\begin{itemize}
+			\item[]Test for distant vision
+			\item[]Test for near vision.
+		\end{itemize}
+		\subsubsection*{Test for distant vision:(Snellen's chart)}
+		A series of letters of varying size are constructed in such a way that the top letter is visible to normal eyes at 60 metres and the subsequent lines at 36 , 24, 18, 12, 9 , 6, 5 meters respectively. Visual acuity, V=d/D , where d is the distance at which the letters are read (6m) and D is the distance from which the letters can be read normally.
+		\par
+		The subject is seated at a distance of 6 m from a well illuminated Snellen's chart and each eye should be tested separately. The line upto which the subject is able to read is noted.If the subject wears glasses , visual acuity should be tested with and without them.
+		\paragraph{Observation:}
+		If the person is able to read upto the third line, his visual acuity is 6/24. A normal person can read upto the 7thline ie. Visual acuity is 6/6. If the subject is not able to read even the first line, ask him to move towards the chart until he can read the top letter.
+		\par
+		(e.g) If he is able to read at 2 meters then his visual acuity is 2/60. If the visual acuity is less than 1/60, then proceed with
+		\begin{enumerate}
+\item{Finger counting test}
+\item{Hand movement test}
+\item{Light Perception test}
+		\end{enumerate}
+
+		\subsubsection*{Test for near vision : (Jaegar’s chart)}
+			The subject is seated in a well illuminated room comfortably. The visual acuity for near vision is tested by asking the subject to read Jaeger's chart at reading distance(25-30cm).This chart consists of letters of various size based on the principle of  Printer’s point system. The smallest point is N5 and the largest point is N36.The near vision is recorded as the smallest type which the subject can read comfortably.
+			\subsection*{Field of vision: (Confrontation Test)}
+			This method is useful for testing the peripheral field of vision.The examiner must have a normal visual field as field defects in the subject are detected by comparing with that of the examiner. The examiner sits at one arm distance from the subject at the same level. Each eye is tested separately .
+			\par
+			To test the subject's right eye, the subject’s left eye and the examiner's right eye are closed. The subject is asked to fix his gaze at the examiner’s left eye. The subject is instructed not to turn his head or shift his gaze. The examiner holds out his left arm to its full extent and then moves his finger from periphery to the centre, kept midway between him and the subject in all the four quadrants (temporal, nasal, superior and inferior) . Ask the subject to say 'yes' when he sees the finger tip. If the subject's field of vision is normal, he will be able to see the moving finger at the point where the examiner sees it. Repeat the test in the other eye.
+			\subsubsection*{Discussion:}
+			The field of vision is maximum in the temporal quadrant and minimum in the superior quadrant.
+			Visual Field defects- Scotoma and Hemianopia
+			Perimeter is used to accurately map the peripheral field of vision
+			\subsection*{Colour vision}
+			\paragraph{Ishihara's chart:} The Ishihara's chart consists of series of lithographic colour plates which are printed with figures or designs in coloured circles on a background of differently coloured circles of the same size. The subject is asked to read numbers or trace the lines in each plate of the book.A person with defective colour vision will read a different number from the colour plate.
+			\paragraph{Holmgren’s wool test:} The subject is asked to perform a series of colour matching from a collection of wools of different colours. A colour blind subject will not be able to match the colours.
+			As Optic nerve is a component of papillary reflexes, light reflex and accommodation reflex are tested.
+
+			\subsection*{Pupillary light reflex:}
+			\paragraph{Direct light reflex:}Examine each eye separately.Ask the subject to fix the gaze at a distant object. Shine the light from the side with a pen torch into the eye. Observe the pupilary reaction.
+			\paragraph{Response:} A brisk constriction of the pupil is noted. Afferent – 2nd cranial nerve.
+			Efferent – 3rd cranial nerve.
+			Indirect/ Consensual light reflex: Subject is instructed to place his hand over the nose as a partition between his eyes.This will prevent the light entry into the other eye. Now while shining the light into one eye, observe the pupillary response in the other eye. The response of pupillary constriction in the left eye when light is shown on the right eye is indirect light reflex.
+			Response:
+			Showing the light into the testing eye causes constriction of pupil in both eyes. Afferent 	– 	2nd cranial nerve.
+			Efferent 	– 	3rd cranial nerve. 
+			Consensual light reflex is due to the involvement of Edinger - Westphal nucleus           (3rd nerve nucleus) on both sides.
+			5. Accommodation reflex:
+			Test: Ask the subject to fix the gaze at a distant object. Then,ask him to look at the examiner’s finger which is held close to the subject’s nose .
+			Response: [ “3Cs”]
+			1. Convergence of both the eyeballs by medial recti
+			2. Constriction of pupil by sphincter pupillae.
+			3. Increase in anterior curvature of lens by contraction of ciliary muscle. Afferent – 2nd cranial nerve.
+			4. Efferent – 3rd cranial nerve.
+
+
 	\end{document}
 
 
