cranial nerves 1 to 6

--- a/combinedRecord.tex
+++ b/combinedRecord.tex
@@ -3056,6 +3056,13 @@ Normally he should be able to put a brake on the movement. In cerebellar lesions
 																\textbf{Exp No:}  & \textbf{Date:}\\
 															\end{tabular}
 \section*{1$^{st}$ CRANIAL NERVE – OLFACTORY NERVE (purely sensory)}
+\addfig{
+	\begin{figure}
+		\centering
+		\includegraphics[height=15cm,width=10cm]{./clinicalPhysioPic/cranialNerves1_6/snellensChart.jpg}
+		\caption*{Snellen's Chart}
+	\end{figure}
+}
 It serves the sense of olfaction.
 \subsection*{Test:}
 Make sure that the subject does not have any upper airway congestion or obstruction. To examine use familiar substances like clove oil, peppermint oil,coffeeoap,asafoetida etc. Avoid using irritants like ammonia as it stimulates the fifth cranial nerve.
@@ -3104,28 +3111,110 @@ A normal subject can recognize the substance with each nostril.
 			Visual Field defects- Scotoma and Hemianopia
 			Perimeter is used to accurately map the peripheral field of vision
 			\subsection*{Colour vision}
+			\addfig{
+				\begin{figure}
+					\centering
+					\includegraphics[width=10cm,height=15cm]{./clinicalPhysioPic/cranialNerves1_6/extraocularMuscles.jpg}
+					\caption*{Extraocular Muscles}
+				\end{figure}
+				}
 			\paragraph{Ishihara's chart:} The Ishihara's chart consists of series of lithographic colour plates which are printed with figures or designs in coloured circles on a background of differently coloured circles of the same size. The subject is asked to read numbers or trace the lines in each plate of the book.A person with defective colour vision will read a different number from the colour plate.
 			\paragraph{Holmgren’s wool test:} The subject is asked to perform a series of colour matching from a collection of wools of different colours. A colour blind subject will not be able to match the colours.
 			As Optic nerve is a component of papillary reflexes, light reflex and accommodation reflex are tested.
 
 			\subsection*{Pupillary light reflex:}
 			\paragraph{Direct light reflex:}Examine each eye separately.Ask the subject to fix the gaze at a distant object. Shine the light from the side with a pen torch into the eye. Observe the pupilary reaction.
-			\paragraph{Response:} A brisk constriction of the pupil is noted. Afferent – 2nd cranial nerve.
-			Efferent – 3rd cranial nerve.
-			Indirect/ Consensual light reflex: Subject is instructed to place his hand over the nose as a partition between his eyes.This will prevent the light entry into the other eye. Now while shining the light into one eye, observe the pupillary response in the other eye. The response of pupillary constriction in the left eye when light is shown on the right eye is indirect light reflex.
-			Response:
-			Showing the light into the testing eye causes constriction of pupil in both eyes. Afferent 	– 	2nd cranial nerve.
-			Efferent 	– 	3rd cranial nerve. 
+			\paragraph{Response:} A brisk constriction of the pupil is noted.\\ 
+			\textbf{Afferent}– 2nd cranial nerve.
+			\textbf{Efferent}– 3rd cranial nerve.
+			\paragraph{Indirect/ Consensual light reflex:}
+			Subject is instructed to place his hand over the nose as a partition between his eyes.This will prevent the light entry into the other eye. Now while shining the light into one eye, observe the pupillary response in the other eye. The response of pupillary constriction in the left eye when light is shown on the right eye is indirect light reflex.
+			\paragraph{Response:}
+			Showing the light into the testing eye causes constriction of pupil in both eyes.\\ 
+			\textbf{Afferent} 	– 	2nd cranial nerve.
+			\textbf{Efferent} 	– 	3rd cranial nerve. 
 			Consensual light reflex is due to the involvement of Edinger - Westphal nucleus           (3rd nerve nucleus) on both sides.
-			5. Accommodation reflex:
+			\subsection*{Accommodation reflex:}
 			Test: Ask the subject to fix the gaze at a distant object. Then,ask him to look at the examiner’s finger which is held close to the subject’s nose .
-			Response: [ “3Cs”]
-			1. Convergence of both the eyeballs by medial recti
-			2. Constriction of pupil by sphincter pupillae.
-			3. Increase in anterior curvature of lens by contraction of ciliary muscle. Afferent – 2nd cranial nerve.
-			4. Efferent – 3rd cranial nerve.
+			\paragraph{Response: [ “3Cs”]}
+			\begin{enumerate}
+\item{Convergence of both the eyeballs by medial recti}
+\item{Constriction of pupil by sphincter pupillae.}
+\item{Increase in anterior curvature of lens by contraction of ciliary muscle. }
+			\end{enumerate}
+			\textbf{Afferent}– 2nd cranial nerve.
+			\textbf{Efferent} – 3rd cranial nerve.
+\subsection*{Discussion:}
+	In lesions of 3rd cranial nerve, accommodation reflex is absent on the affected side. Argyll-Robertson Pupil:In neurosyphilis the pretectal region of the midbrain is damaged. Here pupillary light reflex is absent and the accommodation reflex is preserved.
 
+\section*{3, 4 \& 6 CRANIAL NERVES –OCCULOMOTOR, TROCHLEAR \& ABDUCENT NERVES (Purely motor)}
+They supply the extra ocular muscles which move the eyeball.  
+Trochlear nerve supplies the superior oblique. 
+Abducent Nerve supplies the lateral rectus.
+Occulomotor nerve supplies Superior rectus, Inferior rectus, Medial rectus and Inferior oblique.
+	It also supplies Sphincter pupillae, Ciliary muscle and Levator palpebrae superioris.
+\subsection*{Tests:}
+\begin{itemize}
+\item{Examine the eyes of the subject for the presence of ptosis.}
+\item{Examine the size and shape of pupil.}
+\item{Test for conjugate movements of eye
+	\par
+	Ask the subject to sit comfortably in front of the examiner at one arm distance.  Ask the subject to follow the movements of the examiner's finger with his eyes, without moving his head. First, move your finger laterally to the right of the subject, from there vertically upwards and downwards.  Then, move your finger laterally to the left, from there vertically upwards and downwards.  Observe if the subject is able to follow the finger movements and look for any limitation of movement in any direction.}
+\item{Pupillary Light reflex : (refer 2nd cranial nerve)}
+\item{Accommodation reflex : (refer 2nd cranial nerve)}
+\end{itemize}
+\section*{5$^{th}$ CRANIAL NERVE: TRIGEMINAL NERVE (MIXED NERVE)}
+	It has sensory (Ophthalmic, Maxillary and Mandibular divisions carry the sensations of face) and motor components (Muscles of mastication).
+\subsection*{Tests for sensory function:}
+The areas of face supplied by the three divisions of 5th nerve are tested.
+\begin{enumerate}
+\item{ Touch}
+\item{ Pain	}
+\item{ Temperature}
+\item{ Pressure}
+\item{ Tactile localization	}
+\item{ Two point discrimination.}
+\end{enumerate}
+Refer the sensory system examination for methods to elicit the above sensations.
+\subsection*{Tests for motor functions:}
+To test the muscles of mastication : Masseter, Temporalis and Pterygoids.
+\par
+Ask the subject to clench his teeth and palpate the prominence of the Temporalis and Masseter muscles on both sides over the temple and upper part of the cheek. If there is paralysis on one side , the muscles on that side will fail to become prominent.
+\par
+Ask the subject to open his mouth and look for deviation of jaw. If the is paralysis on one side, on opening the mouth , the jaw will deviate towards the paralysed side due to unopposed action of the lateral pterygoid muscle of healthy side.
+\par
+Ask the subject to open his mouth and move the jaw from side to side.
+\subsection*{Reflexes:}
+\subsubsection*{Conjunctival reflex:}
+	Ask the subject to look at a distant object. Touch the bulbar conjunctiva with a fine wisp of sterile cotton brought from the side. Test both the eyes.
+\textbf{Response:}Closure of both eyes.\\ 
+\textbf{Afferent}– 5th cranial nerve. \textbf{Efferent} – 7th cranial nerve.
+\subsubsection*{Corneal reflex:}
+Ask the subject to look at a distant object. Then touch the limbus (sclerocorneal junction) with a sterile cotton wool brought from the side of the subject Test both the eyes.
+\textbf{Response:} Closure of both eyes.\\
+\textbf{Afferent} - 5th cranial nerve
+\textbf{Efferent} - 7th  cranial nerve.
+\subsubsection*{Jaw Jerk:}
+Ask the subject to let his jaw sag open slightly. Place the left thumb over t he chin and tap with the knee hammer.
+\textbf{Response:} Closure of mouth.\\
+\textbf{Afferent \& Efferent} – 5th   cranial nerve.
 
+\section*{Inference:}
+\vspace{1in}
+
+\section*{Questions:}
+\begin{enumerate}
+\item{ Trace the pathway for smell.}
+\item{ What are the factors that affect the visual acuity?}
+\item{ Name the refractory errors. How do you correct them?}
+\item{ What  is the clinical significance of tests for colour vision?}
+\item{ What  are the other methods for testing colour vision?}
+\item{ Define field of vision.}
+\item{ What is blind spot?}
+\item{ Mention the visual field defects produced by lesions at various levels in the visual pathway.}
+\item{ What is ptosis?}
+\item{ Trace the pathway for light reflex.}
+\end{enumerate}
 	\end{document}
 
 
