Added 7-12 cranial nerves

--- a/combinedRecord.tex
+++ b/combinedRecord.tex
@@ -3050,8 +3050,8 @@ Normally he should be able to put a brake on the movement. In cerebellar lesions
 \item{ What is Resting tremor?}
 											\end{enumerate}
 %---------------------------------------}}}
-
-															\chapter*{\centering Examination Of Cranial Nerves (1-6)}
+%------------------------Cranial Nerves 1 to 6 ------{{{
+														\chapter*{\centering Examination Of Cranial Nerves (1-6)}
 															\begin{tabular}{p{5in} p{1in}}
 																\textbf{Exp No:}  & \textbf{Date:}\\
 															\end{tabular}
@@ -3214,6 +3214,259 @@ Ask the subject to let his jaw sag open slightly. Place the left thumb over t he
 \item{ Mention the visual field defects produced by lesions at various levels in the visual pathway.}
 \item{ What is ptosis?}
 \item{ Trace the pathway for light reflex.}
+\end{enumerate}
+%-----------------------}}}
+
+														\chapter*{\centering Examination Of Cranial Nerves (7-12)}
+															\begin{tabular}{p{5in} p{1in}}
+																\textbf{Exp No:}  & \textbf{Date:}\\
+															\end{tabular}
+\section*{7$^{th}$ CRANIAL NERVE – FACIAL NERVE (Mixed nerve)}
+\addfig{
+	\centering
+	\begin{figure}
+		\begin{subfigure}[t]{.48\textwidth}
+			\centering
+			\includegraphics[width=5cm,height=5cm]{./clinicalPhysioPic/cranialNerves7_12/7thNerve_1.jpg}
+			\subcaption{Examination of Orbicularis Oris}
+		\end{subfigure}
+		\hspace{\fill}
+		\begin{subfigure}[t]{.48\textwidth}
+			\centering
+			\includegraphics[width=5cm,height=5cm]{./clinicalPhysioPic/cranialNerves7_12/7thNerve_2.jpg}
+			\subcaption{Examination of Zygomaticus Major}
+		\end{subfigure}
+		\hspace{\fill}
+		\begin{subfigure}[t]{.48\textwidth}
+			\centering
+			\includegraphics[width=5cm,height=5cm]{./clinicalPhysioPic/cranialNerves7_12/7thNerve_3.jpg}
+			\subcaption{Examination of Orbicularis Oculi}
+		\end{subfigure}
+		\hspace{\fill}
+		\begin{subfigure}[t]{.48\textwidth}
+			\centering
+			\includegraphics[width=5cm,height=5cm]{./clinicalPhysioPic/cranialNerves7_12/7thNerve_4.jpg}
+			\subcaption{Examination of Frontal belly of Occipitofrontalis}
+		\end{subfigure}
+		\hspace{\fill}
+		\begin{subfigure}[t]{\textwidth}
+			\centering
+			\includegraphics[width=10cm,height=4cm]{./clinicalPhysioPic/cranialNerves7_12/7thNerve_BellsPalsy.jpg}
+			\subcaption{Bell's Palsy}
+		\end{subfigure}
+		\hspace{\fill}
+		\caption*{Examination Of The Motor Component Of The Facial Nerve}
+	\end{figure}
+}
+The seventh nerve consists of,
+Motor fibres supply the muscles of facial expression, muscles of the scalp and ear, platysma, posterior belly of digastrics, stylohyoid and stapedius.
+Parasympathetic fibres supply nasal, palatine, lacrimal, submaxillary and sublingual glands.
+Special sensory fibres carrying taste from anterior two third of the tongue.
+\subsection*{EXAMINATION OF FACIAL NERVE}
+\subsubsection*{Motor component:}
+\paragraph{Muscles of facial expression}
+\begin{itemize}
+\item{Look for the symmetry of face, loss of facial expression and obliteration of nasolabial folds}
+\item{Ask the subject to raise the eyebrows and look for wrinkling of the forehead, ( Frontal belly of occipitofrontalis).}
+\item{Ask the subject to frown (Corrugator supercilii).}
+\item{Ask the subject to shut his eyes tightly and attempt to open his eyes while the subject tries to keep them closed . (Orbicularis oculi).}
+\item{Ask the subject to smile or show his teeth and look for deviation of the angle of mouth. In lesions of the facial nerve, the angle of mouth is deviated to the healthy side.}
+\item{Ask the subject to whistle,(orbicularis oris and buccinators)}
+\item{Ask the subject to inflate his mouth with air and blow out the cheeks. Tap with the finger on either side and see if air escapes easily from the mouth.}
+\item{Ask the subject to clench his teeth and look for the prominence of platysma muscle in the neck.
+	\par
+		\textbf{Bell’s phenomenon:}Ask the subject to close his eyes. On closing the eyes the eyeballs roll upwards, which is not seen in a normal person since the eyelids close properly. In Bell’s palsy (LMN type of facial nerve palsy), this phenomenon is seen on the affected side as he cannot close the eyelids.}
+\end{itemize}
+\subsubsection*{Sensory component:}
+Test the taste sensation in anterior two third of the tongue\\
+Use solutions of sugar, common salt, citric acid and quinine to test sensations of sweet, salt, sour and bitter respectively\\
+Ask the subject to protrude the tongue out and apply the solution on the surface of one half of the tongue with a swab.\\
+The subject is asked to indicate perception of the taste by finger signs without taking the tongue back into the mouth.\\
+After each test, the mouth must be rinsed.\\
+The test is repeated with each solution and then on the other half of tongue.\\
+The bitter quinine should be applied last, as its effect lasts longer.
+\subsubsection*{Reflexes:}
+		\begin{itemize}
+\item{Corneal reflex (Refer 1-6 cranial nerve)}
+\item{Conjunctival reflex (Refer 1-6 cranial nerve)}
+\item{Ask for any history suggestive of hyperacusis (stapedius)}
+		\end{itemize}
+
+		\section*{8th CRANIAL NERVE- VESTIBULO-COCHLEAR NERVE (Purely sensory)}
+
+	Eighth nerve consists of 2 components – Cochlear component innervates cochlea and subserves hearing.Vestibular component supplies the labryrinth and semicircular canals which subserves equilibrium and balance.
+
+		\paragraph{TESTS FOR COCHLEAR FUNCTION}
+		\begin{enumerate}
+\item{Watch test
+	\par
+	Ask the subject to close his eyes. The examiner should stand to the side of the ear to be tested and the other ear is masked by tragal movement. A ticking watch is brought from a distance and note the distance at which its ticking is heard. Repeat the same procedure on the opposite ear. The results of the two ears are compared with that of the normal subject.}
+\item{Whisper test
+	The test starts with a whispered voice at 60cm (approximate intensity 15dB) from the test ear and proceeds with a whispered voice at 15cm (35dB). If there is no response, a conventional voice at 60cm (50dB) is used. Repeat the same procedure on the opposite ear.}
+\item{Tuning fork tests
+	\par
+A tuning fork of 256 Hz or 512 Hz is used.
+	}
+	
+				\begin{itemize}
+						\renewcommand{\labelitemi}{$\diamond$}
+
+					\item{\textbf{Rinne’s test:}
+\par
+This test compares hearing by air and bone conduction.
+\par
+After giving proper instructions to the subject, vibrate the tuning fork by holding the stem and strike it against the hypothenar eminence.
+Immediately place the base of the vibrating fork on the mastoid process behind the ear and ask the subject to raise the finger when he ceases to hear the sound.
+Once he stops hearing, hold the fork in line with the external ear canal and ask if he hears the sound. When he stops hearing, bring the fork close to your ear to confirm whether the vibration has actually stopped.\\
+
+						\textbf{Interpretation:}
+						\par
+In normal subjects, air conduction is better than bone conduction – Rinne positive .\\
+Rinne positive response is also found in patients with partial sensorineural deafness.\\
+Rinne negative – Bone conduction is better than air conduction, found in patients with conduction deafness\\
+In total or complete nerve deafness – no sound is heard either by way of air or bone conduction.
+
+						}
+
+					\item{\textbf{Weber’s test:}
+\par
+This test compares bone conduction of both the ears. 
+Place the base of the vibrating tuning fork in midline i.e. centre of the forehead (Glabella) or vertex of the head and ask the subject to indicate, whether the sound is heard equally in both ears or lateralized to one ear.
+
+						\textbf{Interpretation:}
+						\par
+In normal subjects – the sound is heard in midline or equally in both ears.\\
+Sensorineural deafness – the sound is heard louder in the normal ear.\\
+Conduction deafness - the sound is heard louder on the side with conduction deafness.
+}
+\item{\textbf{Absolute bone conduction (Schwabach test):}
+	\par
+	This test compares the bone conduction of the subject with that of the examiner.
+	The bone conduction is made absolute by occluding the external auditory meatus. Place the vibrating tuning fork on the mastoid process of the subject first and when he ceases to hear the sound, place it on the examiner’s mastoid process.\\
+						\textbf{Interpretation:}
+						\par
+						\textbf{Normal response:}Absolute bone conduction should be equal for the subject and the examiner i.e. the subject ceases to hear the sound at the same time as the examiner.
+						}
+				\end{itemize}
+
+\item{Audiometry
+	\par
+	Audiometry is an objective and accurate method to asses the type and degree of deafness and frequency range at which it manifests.
+	}
+
+		\end{enumerate}
+
+\subsection*{TESTS FOR VESTIBULAR COMPONENT}
+Ask the subject for history of vertigo.\\
+Look for Nystagmus (Involuntary, jerky, to and fro rhythmic movements of the eyeball).
+
+\section*{9$^{th}$ CRANIAL NERVE – GLOSSOPHARYNGEAL NERVE (Mixed nerve)}
+\addfig{
+	\centering
+	\begin{figure}
+		\begin{subfigure}[t]{.48\textwidth}
+			\centering
+			\includegraphics[width=7cm,height=5cm]{./clinicalPhysioPic/cranialNerves7_12/softPalate_1.jpg}
+			\subcaption{The Soft Palate}
+		\end{subfigure}
+		\hspace{\fill}
+		\begin{subfigure}[t]{.48\textwidth}
+			\centering
+			\includegraphics[width=5cm,height=5cm]{./clinicalPhysioPic/cranialNerves7_12/softPalate_2.jpg}
+			\subcaption{The Palatine Reflex}
+		\end{subfigure}
+		\hspace{\fill}
+		\begin{subfigure}[t]{\textwidth}
+			\centering
+			\includegraphics[width=10cm,height=5cm]{./clinicalPhysioPic/cranialNerves7_12/softPalate_palsy.jpg}
+			\subcaption{The Palate in X Nerve Palsy}
+		\end{subfigure}
+		\hspace{\fill}
+		\caption*{Examination Of Soft Palate and Palatine Reflex}
+	\end{figure}
+}
+\paragraph{It consists of 3 components:}
+\begin{itemize}
+\item[]Motor fibres supply stylopharyngeus muscle and middle constrictor of the pharynx which helps in swallowing.
+\item[]Sensory fibres carry taste sensation from posterior $\frac{1}{3}$${rd}$ of the tongue and general sensations from mucous membrane of pharynx.It innervates the baroreceptors in the carotid sinus.
+\item[]Secretomotor fibres supply the parotid gland.
+\end{itemize}
+
+\subsection*{TEST FOR MOTOR FUNCTION}
+\subsubsection*{Pharygeal reflex (Gag reflex):}
+Ask the subject to open his mouth wide and tickle the back of the pharynx with the help of a cotton swab stick and observe the contraction of posterior pharyngeal wall, ( 9thand 10thcranial nerve)
+
+\subsection*{TESTS FOR SENSORY COMPONENT}
+Test the taste sensation (as explained in the 7th cranial nerve) on the posterior $\frac{1}{3}^{rd}$of the tongue.
+Baroreceptor function-Record the blood pressure of the subject in the supine position and immediately (within 15 seconds) on standing. A fall in systolic BP of more than 20mmHg is suggestive of orthostatic hypotension.
+
+\section*{10$^{th}$ CRANIAL NERVE – VAGUS NERVE (Mixed nerve)}
+\paragraph{It has motor and sensory components.}
+\begin{itemize}
+\item[]Motor fibres supply muscles of soft palate, pharynx and larynx.
+\item[]Sensory fibres supply pharynx, larynx, trachea and most of the thoracic and abdominal viscera.
+\item[]Parasympathetic fibres supply the heart, bronchial muscle and glands, smooth muscle and glands of most of GIT.
+\end{itemize}
+
+\subsection*{Tests}
+\begin{itemize}
+\item[]Ask the subject if there is any history of regurgitation and difficulty in swallowing (dysphagia).
+\item[]Ask the subject to pronounce the words that require complete closure of nasopharynx such as egg, rub etc. ‘Egg’ is sounded as ‘eng’ and ‘rub’ as ‘rum’ in paralysis of soft palate.
+\item[]Examination of soft palate: Ask the subject to open his mouth and depress the tongue with a tongue depressor Ask him to say ‘ah’ and observe whether both sides of the soft palate arch equally upwards.
+\item[]In unilateral paralysis, paralysed side will remain flat and immobile.
+\item[]Elicit Gag reflex : Refer 9th cranial nerve.
+\item[]Check for hoarseness of voice
+\item[]Baroreceptor function - Test for postural hypotension (refer 9th cranial nerve).
+\end{itemize}
+\section*{11th CRANIAL NERVE – SPINAL ACCESSORY NERVE (Purely motor) }
+\addfig{
+	\centering
+	\begin{figure}
+		\begin{subfigure}[t]{.48\textwidth}
+			\centering
+			\includegraphics[width=5cm,height=5cm]{./clinicalPhysioPic/cranialNerves7_12/11thNerve_trapezius.jpg}
+			\subcaption{Examination of Trapezius}
+		\end{subfigure}
+		\hspace{\fill}
+		\begin{subfigure}[t]{.48\textwidth}
+			\centering
+			\includegraphics[width=5cm,height=5cm]{./clinicalPhysioPic/cranialNerves7_12/11thNerve_scm.jpg}
+			\subcaption{Examination of Sternocleidomastoid}
+		\end{subfigure}
+		\hspace{\fill}
+		\caption*{Examination Of XI cranial nerve}
+	\end{figure}
+}
+The spinal part of the accessory nerve supplies sternocleidomastoid and trapezius muscle.
+
+\subsection*{Test for Sternocleidomastoid muscle:}
+Ask the subject to turn the chin towards left side and offer resistance with your hand over the left side of his face. Look for the prominence of the muscle. Repeat the procedure for testing the left side muscle by asking the subject to turn the chin towards right side against resistance.\\
+Ask the subject to depress his chin and offer resistance, to test muscles on both sides simultaneously.
+
+\subsection*{Test for Trapezius muscle:}
+Stand behind the subject and ask the subject to shrug the shoulders while the examiner presses them downward
+
+\section*{12th CRANIAL NERVE – HYPOGLOSSAL NERVE (Purely motor)}
+
+	It supplies all the muscles of the tongue and depressors of the hyoid bone.
+\subsection*{Test:}
+Ask the subject to put out his tongue and look for any deviation, wasting, tremor or fasciculations of the tongue\\
+Ask the subject to move the tongue from side to side and push against the cheeks, while the examiner offers resistance from outside.\\
+In unilateral paralysis, the tongue will be deviated towards the paralysed side on protrusion. The muscles of the healthy side push the tongue to the paralysed side.\\
+In bilateral paralysis, the person will not be able to protrude the tongue.\\
+In LMN type of paralysis, wasting, fasciculation and flaccidity of the tongue are present.\\
+In UMN type of paralysis, the tongue may be small and spastic.
+
+\section*{Questions:}
+\begin{enumerate}
+\item{ What is Bell’s palsy?}
+\item{ What is Bell’s phenomenon?}
+\item{ Differentiate between UMN and LMN palsy of facial nerve.}
+\item{ What are the differences between UMN and LMN paralysis of twelfth cranial nerve?}
+\item{ What are the two types of deafness? Give examples for each.}
+\item{ What is Rinne’s positive?}
+\item{ How do you differentiate nerve deafness from conduction deafness by using Weber’s test?}
+\item{ What is Barany’s caloric test?}
 \end{enumerate}
 	\end{document}
 
